# 2cha

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  UPDATE_v1.0.0_PLAN.md  build.sh  bump-version.sh  default.nix  flake.nix  protocol.toml  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  format.yml  reality-lib.yml  reality-release-check.yml  reality-spike.yml  release.yml
crates/twocha-cli/: Cargo.toml
crates/twocha-cli/src/: main.rs
crates/twocha-cli/src/cli/: app.rs  commands.rs  mod.rs  output.rs  utils.rs
crates/twocha-cli/src/cli/commands/: config.rs  init.rs  keys.rs  mod.rs  peer.rs  server.rs  setup.rs  status.rs  updown.rs
crates/twocha-cli/src/cli/commands/init_wizard/: client.rs  detect.rs  mobile.rs  mod.rs  render.rs  server.rs  write.rs
crates/twocha-core/: Cargo.toml
crates/twocha-core/src/: lib.rs
crates/twocha-core/src/config/: client.rs  common.rs  edit.rs  mod.rs  server.rs
crates/twocha-core/src/crypto/: aead.rs  aes_gcm.rs  identity.rs  kdf.rs  key_exchange.rs  keyfile.rs  mac.rs  mod.rs  noise.rs  reality.rs  util.rs
crates/twocha-core/src/v4/: handshake.rs  mod.rs  ratelimit.rs  session.rs
crates/twocha-lib/: Cargo.toml  build.rs
crates/twocha-lib/src/: lib.rs
crates/twocha-lib/src/platform/: mod.rs
crates/twocha-lib/src/platform/unix/: mod.rs  netlink.rs  network.rs  routing.rs  tun.rs
crates/twocha-lib/src/platform/windows/: mod.rs  network.rs  routing.rs  tun.rs
crates/twocha-lib/src/transport/: awg_prelude.rs  mod.rs  reality.rs  tls.rs  udp_quic.rs
crates/twocha-lib/src/vpn/: common.rs  mod.rs
crates/twocha-lib/src/vpn/client/: handler.rs  mod.rs
crates/twocha-lib/src/vpn/server/: control.rs  handler.rs  mod.rs  workers.rs
crates/twocha-mobile/: Cargo.toml
crates/twocha-mobile/src/: lib.rs
crates/twocha-protocol/: Cargo.toml
crates/twocha-protocol/src/: constants.rs  error.rs  handshake.rs  lib.rs  mac.rs  noise.rs  obfs.rs  packet.rs  packet_v4.rs  replay.rs  session.rs  wire.rs
docs/: README.md  client-setup.md  config-cli.md  configuration.md  installation.md  keys-and-peers.md  nixos.md  protocol-v4.md  quickstart.md  reality-go-design.md  reality.md  routing.md  server-setup.md  testing.md  transports.md  troubleshooting.md  windows-support.md
examples/: client.toml  server.toml
native/goreality/: destcheck.go  destcheck_test.go  go.mod  goreality.go  testdest.go
nix/: nixos-module.nix  package.nix
reality-spike/: README.md
reality-spike/goreality/: go.mod  goreality.go
reality-spike/rust/: Cargo.toml  build.rs
reality-spike/rust/src/: main.rs
scripts/: format.sh  install.sh  netns-test.sh  setup-gateway.sh
src/: client.rs  client_windows.rs  config.rs  constants.rs  crypto.rs  error.rs  lib.rs  main.rs  network.rs  network_windows.rs  protocol.rs  routing.rs  routing_windows.rs  server.rs  server_windows.rs  tun.rs  tun_windows.rs
src/cli/: app.rs  commands.rs  mod.rs  output.rs  utils.rs
src/core/: error.rs  mod.rs
src/core/config/: client.rs  mod.rs  server.rs
src/core/crypto/: aead.rs  aes_gcm.rs  chacha20.rs  mod.rs  poly1305.rs  util.rs
src/core/protocol/: mod.rs  packet.rs
src/platform/unix/: mod.rs  network.rs  routing.rs  tun.rs
src/platform/windows/: mod.rs  network.rs  routing.rs  tun.rs
src/vpn/client/: handler.rs  mod.rs
src/vpn/server/: handler.rs  mod.rs
