[package]
name = "twocha"
version = "0.3.2"
edition = "2021"
description = "2cha - High-performance VPN utility with IPv4/IPv6 support"
license = "MIT"
authors = ["2cha contributors"]

[[bin]]
name = "2cha"
path = "src/main.rs"

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"

# For static musl builds:
# rustup target add x86_64-unknown-linux-musl
# cargo build --release --target x86_64-unknown-linux-musl
#
# For cross-compilation to ARM:
# rustup target add aarch64-unknown-linux-musl
# cargo build --release --target aarch64-unknown-linux-musl
