[workspace]
resolver = "2"
members = [
    "crates/twocha-protocol",
    "crates/twocha-core",
    "crates/twocha-lib",
    "crates/twocha-cli",
    "crates/twocha-mobile",
]

[workspace.package]
version = "1.8.0-rc2"
edition = "2021"
license = "MIT"
authors = ["keepinfov"]
repository = "https://github.com/keepinfov/2cha"

[workspace.dependencies]
# Internal crates
twocha-protocol = { path = "crates/twocha-protocol" }
twocha-core = { path = "crates/twocha-core" }
twocha-lib = { path = "crates/twocha-lib" }

# Shared dependencies
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
toml_edit = "0.23"
serde_json = "1.0"

# Cryptography (RustCrypto - pure Rust, safe, audited)
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
# ring-accelerated: AES-GCM/ChaCha20 via ring's assembly kernels; snow's
# fallback resolver keeps BLAKE2s (unsupported by ring) on the pure-Rust path.
snow = { version = "0.9", features = ["ring-accelerated"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
blake2 = "0.10"
subtle = "2.5"
base64 = "0.22"
rand = "0.8"

# CLI/TUI
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
# terminal QR for the mobile onboarding export (pure Rust, musl-safe)
qrcode = { version = "0.14", default-features = false }
console = "0.16.1"
dialoguer = "0.12"
indicatif = "0.18.3"
rpassword = "7.3"

# Unix-specific
libc = "0.2"
daemonize = "0.5"
signal-hook = "0.3"
# "all" unlocks SO_REUSEPORT (worker pool binds N sockets to one port)
socket2 = { version = "0.5", features = ["all"] }

# Windows-specific
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_LibraryLoader",
] }
wintun = "0.5"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# The mobile cdylib must keep its symbol table: uniffi's library-mode bindgen
# extracts the `UNIFFI_META_*` records from `.symtab`, which `strip = true`
# would remove (leaving the generator to silently emit zero bindings). Desktop
# binaries stay stripped; only this crate's artifact retains symbols.
[profile.release.package.twocha-mobile]
strip = false

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"

# ═══════════════════════════════════════════════════════════════════════════════
# CROSS-COMPILATION TARGETS
# ═══════════════════════════════════════════════════════════════════════════════
#
# Supported platforms:
#   - x86_64-unknown-linux-gnu     (64-bit glibc)
#   - x86_64-unknown-linux-musl    (64-bit static)
#   - i686-unknown-linux-gnu       (32-bit x86 glibc)
#   - i686-unknown-linux-musl      (32-bit x86 static)
#   - aarch64-unknown-linux-gnu    (64-bit ARM glibc)
#   - aarch64-unknown-linux-musl   (64-bit ARM static)
#   - arm-unknown-linux-gnueabihf  (32-bit ARM glibc, hard float)
#   - arm-unknown-linux-musleabihf (32-bit ARM static, hard float)
#   - armv7-unknown-linux-gnueabihf    (ARMv7 glibc)
#   - armv7-unknown-linux-musleabihf   (ARMv7 static)
#
# Build examples:
#
# Static x86_64:
#   rustup target add x86_64-unknown-linux-musl
#   cargo build --release --target x86_64-unknown-linux-musl
#
# Static ARM64:
#   rustup target add aarch64-unknown-linux-musl
#   cargo build --release --target aarch64-unknown-linux-musl
#
# Static ARM32 (Raspberry Pi, etc.):
#   rustup target add arm-unknown-linux-musleabihf
#   cargo build --release --target arm-unknown-linux-musleabihf
#
# Static ARMv7 (better for modern ARM32 devices):
#   rustup target add armv7-unknown-linux-musleabihf
#   cargo build --release --target armv7-unknown-linux-musleabihf
#
# Cross-compilation with cross tool (easier for ARM):
#   cargo install cross
#   cross build --release --target armv7-unknown-linux-musleabihf
#   cross build --release --target aarch64-unknown-linux-musl
#
# ═══════════════════════════════════════════════════════════════════════════════
