[package]
name = "twocha-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "2cha VPN CLI application"

[[bin]]
name = "2cha"
path = "src/main.rs"

[dependencies]
twocha-protocol = { path = "../twocha-protocol" }
twocha-core = { path = "../twocha-core" }
twocha-lib = { path = "../twocha-lib" }

# CLI dependencies
clap = { workspace = true }
console = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
rpassword = { workspace = true }

[target.'cfg(unix)'.dependencies]
daemonize = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
ctrlc = { workspace = true }
