[package]
name = "twocha-core"
description = "2cha VPN core functionality - configuration and cryptography"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "twocha_core"

[dependencies]
twocha-protocol.workspace = true

serde.workspace = true
toml.workspace = true

# Cryptography (RustCrypto - pure Rust, safe, audited)
chacha20poly1305.workspace = true
aes-gcm.workspace = true
zeroize.workspace = true

# Asymmetric cryptography (v4 protocol)
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
curve25519-dalek.workspace = true

# Key derivation and hashing
hkdf.workspace = true
sha2.workspace = true
blake2.workspace = true

# Random number generation
rand_core.workspace = true
rand.workspace = true

# CRC for checksums
crc32fast.workspace = true

# Base64 encoding
base64.workspace = true
