[package]
name = "twocha-lib"
description = "2cha VPN library - platform abstraction and VPN handlers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "twocha_lib"

[dependencies]
twocha-protocol.workspace = true
twocha-core.workspace = true

log.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
tun-rs = "2.8.5"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
signal-hook.workspace = true
socket2.workspace = true
neli = "0.7.4"

[target.'cfg(windows)'.dependencies]
ctrlc.workspace = true
