[package]
name = "twocha-lib"
description = "2cha VPN library - platform abstraction and VPN handlers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "twocha_lib"

[features]
# REALITY transport: links the Go xtls/reality core (native/goreality) via cgo.
# Off by default so the standard build stays pure Rust and needs no Go toolchain.
reality = []

[dependencies]
twocha-protocol.workspace = true
twocha-core.workspace = true

log.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
tun-rs = "2.8.5"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
signal-hook.workspace = true
socket2.workspace = true

# netlink routing (Linux desktop only): Android's Bionic libc lacks the kernel
# connector constants neli references, and the mobile path never routes (the
# Android VpnService owns the data plane), so neli is excluded there.
[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
neli = "0.7.4"
# desktop client's connect/disconnect banner (TTY/NO_COLOR-aware styling)
console.workspace = true

[target.'cfg(windows)'.dependencies]
ctrlc.workspace = true
