[package]
name = "twocha-protocol"
description = "2cha VPN protocol types and definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "twocha_protocol"

[dependencies]
# Cryptographic primitives for Noise protocol
blake2.workspace = true
chacha20poly1305.workspace = true
zeroize.workspace = true
