# Standalone crate (its own [workspace] table detaches it from the parent 2cha
# workspace, so normal `cargo build` never pulls Go into the picture).
[package]
name = "reality-ffi-spike"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "reality-ffi-spike"
path = "src/main.rs"
